Setup for 1.19.2